# platform

./: .gitmodules  CMakeLists.txt  appveyor.yml
example/: CMakeLists.txt  main.c  main.cpp
example/cmake/: add_example.cmake
glug_platform/: CMakeLists.txt
glug_platform/cmake/: add_gluglib.cmake  detect_os.cmake  link_libs.cmake  set_compilation_props.cmake  set_export_defs.cmake
glug_platform/include/glug/: platform.h
glug_platform/include/glug/platform/: os.h  platform.h  platform_t.h  system.h  system_t.h  version.h  version_t.h
glug_platform/src/: platform.c  platform_builder.c  platform_builder.c.autosave  platform_builder.h  platform_platform.c  platform_platform.h  system.c  system_builder.c  system_builder.h  system_platform.c  system_platform.h
glug_platform/src/bsd/: platform.c  platform.h  system.c  system.h
glug_platform/src/linux/: platform.c  platform.h  platform_context.h  system.c  system.h
glug_platform/src/macos/: platform.c  platform.h  platform.m  platform_context.h  system.h  system.m
glug_platform/src/null/: platform.c  platform.h  system.c  system.h
glug_platform/src/platform/: platform.c  platform_builder.h  platform_builder_bsd.c  platform_builder_linux.c  platform_builder_macos.c  platform_builder_null.c  platform_builder_win32.c
glug_platform/src/platform/bsd/: platform.c  platform.h  platform_context.h
glug_platform/src/platform/linux/: platform.c  platform.h
glug_platform/src/platform/macos/: platform.h  platform.m
glug_platform/src/platform/null/: platform.c  platform.h  platform_context.h
glug_platform/src/platform/posix/: platform.c  platform.h  platform_context.h
glug_platform/src/platform/win32/: platform.c  platform.h
glug_platform/src/posix/: platform.c  platform.h  platform_context.h  system.c  system.h
glug_platform/src/system/: system.c  system_builder.c  system_builder.h  system_builder_bsd.c  system_builder_linux.c  system_builder_macos.c  system_builder_null.c  system_builder_win32.c
glug_platform/src/system/bsd/: system.c  system.h  system_context.h
glug_platform/src/system/linux/: system.c  system.h  system_context.h
glug_platform/src/system/macos/: system.h  system.m  system_context.h
glug_platform/src/system/null/: system.c  system.h  system_context.h
glug_platform/src/system/posix/: system.c  system_context.h
glug_platform/src/system/win32/: system.c  system.h  system_context.h
glug_platform/src/win32/: platform.c  platform.h  platform_context.h  system.c  system.h
test/: CMakeLists.txt  add_int_test.cmake  add_unit_test.cmake  create_suite.c  create_suite.h
test/unit/: template.c
test/unit/linux/: system.c
test/unit/linux/mocks/: unistd.c  unistd.h
test/unit/win32/: system.c
test/unit/win32/mocks/: Windows.c  Windows.h
